--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,11 +5,11 @@
     <div class="links_container">
         <div class="header_container">
             <div class="header_left">
-                <a class="header_logo" href="/static">Control + V</a>
+                <a class="header_logo" href="/">Control + V</a>
                 <div class="header_links">
                     <a class="link" href="https://github.com/Oraleecy/pastebin" target="_blank">source code</a>
                 </div>
-                <a class="header__btn" href="/static">
+                <a class="header__btn" href="/">
                     <span>paste</span>
                 </a>
                 <div class="header_search">
