--- a/src/main/resources/templates/post_view.html
+++ b/src/main/resources/templates/post_view.html
@@ -17,6 +17,7 @@
 <div th:text="${post.getTitle()}"></div>
 <div th:text="${post.getDateOfPublication()}"></div>
 <div th:text="${content}"></div>
+<div th:text="${post.getCategory()}"></div>
 <div>There will be a unique view counter here</div>
 
 </body>
